crates/plotnik-tests/tests/02-parser/recovery_unexpected/paren_close_inside_alternation.txt
Q = [(a) ) (b)]
------------------ DIAGNOSTICS -------------------
error: missing closing `]`
 --> query.ptk:1:10
  |
1 | Q = [(a) ) (b)]
  |          ^
  |
help: add `]` to close the alternation

error: expected a pattern
 --> query.ptk:1:15
  |
1 | Q = [(a) ) (b)]
  |               ^
  |
help: try `(node)`, `[a b]`, `{a b}`, `"literal"`, or `_`
